# rendering_algorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Buffer.hpp  Color.hpp  Matrix4.hpp  PngBuffer.hpp  Point.hpp  Rasterizer.hpp  Shader.hpp  SphereMesh.hpp  Texture.hpp  TgaBuffer.hpp  Triangle.hpp  Utils.hpp  Vector3.hpp  Vector4.hpp
include/light/: AmbientLight.hpp  DirectionalLight.hpp  Light.hpp  PointLight.hpp
include/mesh/: ConeMesh.hpp  Mesh.hpp
include/shader/: Shader.hpp  SimpleShader.hpp  VertexLightShader.hpp
lib/: CMakeLists.txt
res/: output.tga
src/: Buffer.cpp  CMakeLists.txt  ConeMesh.cpp  Mesh.cpp  PngBuffer.cpp  Rasterizer.cpp  Shader.cpp  SphereMesh.cpp  Texture.cpp  TgaBuffer.cpp
src/mesh/: ConeMesh.cpp  Mesh.cpp  SphereMesh.cpp
src/shader/: SimpleShader.cpp  VertexLightShader.cpp
